--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="text_view_desc_size_main_activity">25sp</dimen>
     <dimen name="padding_text_description_main_activity">20dp</dimen>
     <dimen name="width_and_height_animation_splash_activity">250dp</dimen>
+    <dimen name="width_character_image">150dp</dimen>
+    <dimen name="height_character_image">150dp</dimen>
 </resources>
