Dialog Fragment with details of an especific character added
comments fixed, still problems with UT

Room fixed and UT added

comments fixed 2

comments fixed 3

commit dot fixed

context comment fixed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         style="@style/button_main_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/title_size_main_activity"
         android:text="@string/button_text_main_activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
