--- a/app/src/main/res/layout/card_view_character_item.xml
+++ b/app/src/main/res/layout/card_view_character_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view_character_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -17,6 +18,7 @@
         android:id="@+id/character_image"
         android:layout_width="@dimen/width_character_image"
         android:layout_height="@dimen/height_character_image"
+        android:contentDescription="@string/character_image_content_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/character_name" />
